--- a/sito_modificato/loans-and-debt.html
+++ b/sito_modificato/loans-and-debt.html
@@ -423,7 +423,7 @@ Home / <a href="https://calcdomain.com/finance">Finance</a> / Loans &amp; Debt
   
 
   <div class="badge-row" id="badgeRow">
-    <div class="badge" id="versionBadge">Version 0.1.0-draft</div>
+    <div class="badge" id="versionBadge">Version 1.5.0</div>
   </div>
 
 <details id="citationDetails" style="margin-top:10px;">
