--- a/sito_modificato/long-term-care-cost.html
+++ b/sito_modificato/long-term-care-cost.html
@@ -1158,7 +1158,7 @@
   
 
   <div class="badge-row" id="badgeRow">
-    <div class="badge" id="versionBadge">Version 0.1.0-draft</div>
+    <div class="badge" id="versionBadge">Version 1.5.0</div>
   </div>
 
 <details id="citationDetails" style="margin-top:10px;">
