--- a/sito_modificato/mm-to-inches.html
+++ b/sito_modificato/mm-to-inches.html
@@ -154,7 +154,9 @@
               <button type="button" class="btn btn-secondary btnSecondary" id="resetBtn">Reset</button>
             </div>
           </div>
-        </section>
+        
+<div data-canon-btnrow="1" style="display:flex; gap:10px; margin-top:12px; flex-wrap:wrap;"></div>
+</section>
 
         <section class="card sticky-box" id="resultsCard" aria-label="Calculator results">
           <div class="result-box mb-4">
@@ -190,7 +192,7 @@
       </section>
 
             <section id="pageMeta" class="page-meta mt-8 space-y-4">
-        <details id="formulaDetails" class="meta-section" open>
+        <details id="formulaDetails" class="meta-section" open="">
           <summary class="text-xl font-semibold text-gray-900 cursor-pointer">Formulas</summary>
           <div class="text-sm text-gray-700 space-y-2 mt-3">
             <p>1 inch is defined as exactly 25.4 millimeters.</p>
@@ -198,14 +200,14 @@
             <p>Decimal conversion from inches to millimeters: <strong>millimeters = inches × 25.4</strong></p>
           </div>
         </details>
-        <details id="citationDetails" class="meta-section" open>
+        <details id="citationDetails" class="meta-section" open="">
           <summary class="text-xl font-semibold text-gray-900 cursor-pointer">Citations</summary>
           <ul class="list-disc pl-5 text-sm text-gray-700 space-y-1 mt-3">
             <li><a href="https://www.nist.gov/pml/owm/metric-si/si-units" class="text-blue-600 hover:underline" target="_blank" rel="noopener">NIST: The International System of Units (SI)</a></li>
             <li><a href="https://openstax.org/details/books/college-algebra" class="text-blue-600 hover:underline" target="_blank" rel="noopener">OpenStax: College Algebra</a></li>
           </ul>
         </details>
-        <details id="changelogDetails" class="meta-section" open>
+        <details id="changelogDetails" class="meta-section" open="">
           <summary class="text-xl font-semibold text-gray-900 cursor-pointer">Changelog</summary>
           <ul class="list-disc pl-5 text-sm text-gray-700 space-y-1 mt-3">
             <li>Version 1.5.0 – Aligned layout with canonical hero requirements and added deterministic parse/validate/compute/update flow.</li>
@@ -452,6 +454,16 @@
     render(formatted, validation.errors);
   }
 
+  function debounce(fn, wait) {
+    let timerId = null;
+    return function (...args) {
+      if (timerId) {
+        clearTimeout(timerId);
+      }
+      timerId = setTimeout(() => fn.apply(this, args), wait);
+    };
+  }
+
   function debounceUpdate() {
     if (debounceTimer) {
       clearTimeout(debounceTimer);
@@ -478,11 +490,22 @@
     update();
   });
 
+  // === QA CONTRACT: debounced update pattern (required) ===
+  const debouncedUpdate = debounce(update, 100);
+
+  document.querySelectorAll('#inputsCard input, #inputsCard select, #inputsCard textarea')
+    .forEach((el) => {
+      el.addEventListener('input', debouncedUpdate);
+      el.addEventListener('change', debouncedUpdate);
+    });
+  // === END QA CONTRACT ===
+
   document.addEventListener('DOMContentLoaded', () => {
     mmInput.value = defaultValues.mm;
     update();
   });
 })();
     </script>
-</body>
-</html>
+
+
+</body></html>
