--- a/sito_modificato/mode-calculator.html
+++ b/sito_modificato/mode-calculator.html
@@ -460,7 +460,7 @@
                         .split(/[,\s\n]+/) // Divide per virgola, spazio o nuova riga
                         .filter(n => n.trim() !== '') // Rimuovi stringhe vuote
                         .map(n => parseFloat(n)) // Converti in numeri
-                        .filter(n => !isNaN(n)); // Rimuovi eventuali 'NaN'
+                        .filter(n => Number.isFinite(n)); // Rimuovi eventuali valori non numerici
 
                     if (numbers.length === 0) {
                         errorBox.textContent = 'No valid numbers found. Please enter numbers separated by commas or spaces.';
