--- a/sito_modificato/monte-carlo-simulation.html
+++ b/sito_modificato/monte-carlo-simulation.html
@@ -989,7 +989,7 @@
 
       // Percentile (0-1) from sorted array
       function mcPercentile(sorted, p) {
-        if (!sorted.length) return NaN;
+        if (!sorted.length) return null;
         if (p <= 0) return sorted[0];
         if (p >= 1) return sorted[sorted.length - 1];
         const idx = (sorted.length - 1) * p;
@@ -1046,7 +1046,7 @@
         }
 
         function fmt(x, decimals) {
-          return Number.isFinite(x) ? x.toFixed(decimals) : 'NaN';
+        return Number.isFinite(x) ? x.toFixed(decimals) : '—';
         }
 
         document.getElementById('mc-run-btn').addEventListener('click', function () {
