--- a/sito_modificato/motorcycle-loan-calculator.html
+++ b/sito_modificato/motorcycle-loan-calculator.html
@@ -229,6 +229,22 @@
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
+    <section id="scheduleWrap" class="tableWrap mt-6" aria-label="Amortization schedule" style="border:1px solid #e5e7eb;">
+      <table class="min-w-full text-sm text-right">
+        <thead class="bg-gray-100 text-gray-700 uppercase">
+          <tr>
+            <th class="px-4 py-2 text-left">#</th>
+            <th class="px-4 py-2 text-left">Date</th>
+            <th class="px-4 py-2">Payment</th>
+            <th class="px-4 py-2">Interest</th>
+            <th class="px-4 py-2">Principal</th>
+            <th class="px-4 py-2">Balance</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody" aria-live="polite"></tbody>
+      </table>
+    </section>
+
     <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white border-b">
@@ -374,28 +390,6 @@
               </div>
             </div>
 
-            <details class="mt-6 bg-white rounded-lg">
-              <summary class="font-semibold text-gray-800 tap-target px-4 py-3">View Amortization Schedule</summary>
-              <div class="mt-4 overflow-x-auto border border-gray-200 rounded-lg" id="scheduleContainer">
-                <div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm text-right">
-                  <thead class="bg-gray-100 text-gray-700 uppercase">
-                    <tr>
-                      <th class="px-4 py-2 text-left">#</th>
-                      <th class="px-4 py-2 text-left">Date</th>
-                      <th class="px-4 py-2">Payment</th>
-                      <th class="px-4 py-2">Interest</th>
-                      <th class="px-4 py-2">Principal</th>
-                      <th class="px-4 py-2">Balance</th>
-                    </tr>
-                  </thead>
-                  <tbody id="scheduleBody" aria-live="polite"></tbody>
-                </table></div>
-              </div>
-              <div class="flex gap-3 mt-4">
-                <button id="printBtn" class="tap-target px-4 py-2 rounded-md border bg-white hover:bg-gray-50">Print schedule</button>
-                <button id="copyBtn" class="tap-target px-4 py-2 rounded-md border bg-white hover:bg-gray-50">Copy summary</button>
-              </div>
-            </details>
           </section>
         </div>
 
