--- a/sito_modificato/nec-commercial-load-calculation.html
+++ b/sito_modificato/nec-commercial-load-calculation.html
@@ -342,7 +342,7 @@
     <div id="errorBox" class="alert" role="alert" aria-live="polite"></div>
 
     <div class="calc-hero" id="calcHero">
-      <section class="card" id="inputsCard" aria-label="Calculator inputs"><main class="main-content" id="maincontent" role="main">
+      <section class="card" id="inputsCard" aria-label="Calculator inputs"><main class="main-content" role="main">
 <div class="container">
 <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumbs"><a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> » <a href="https://calcdomain.com/categories/general" class="hover:text-blue-600">General</a> » <a href="https://calcdomain.com/subcategories/miscellaneous" class="hover:text-blue-600">Miscellaneous</a></nav>
 <h1>NEC Service Load Calculator (Non-Dwelling)</h1>
@@ -741,7 +741,7 @@
 
     <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
-    <a class="skip-link" href="#maincontent">Skip to main content</a><link rel="preload" href="/assets/js/mobile-menu.js" as="script"><link rel="preload" href="/assets/js/page-enhancements.js" as="script"><style>
+    <link rel="preload" href="/assets/js/mobile-menu.js" as="script"><link rel="preload" href="/assets/js/page-enhancements.js" as="script"><style>
 /* AUDIT_SPINE_CSS */
 .auditspine-note{
   border:1px solid #e5e7eb;
@@ -773,7 +773,7 @@
 }
 .auditspine-formula pre{margin:8px 0 0; white-space:pre-wrap;}
 .auditspine-hr{border:none; border-top:1px solid #e5e7eb; margin:18px 0;}
-</style><a class="skip-link" href="#maincontent">Skip to main content</a><main class="main-content" id="maincontent" role="main">
+</style><main class="main-content" role="main">
 <div class="container">
 <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumbs"><a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> » <a href="https://calcdomain.com/categories/general" class="hover:text-blue-600">General</a> » <a href="https://calcdomain.com/subcategories/miscellaneous" class="hover:text-blue-600">Miscellaneous</a></nav>
 <h1>NEC Service Load Calculator (Non-Dwelling)</h1>
@@ -1190,7 +1190,7 @@
 }
 .auditspine-formula pre{margin:8px 0 0; white-space:pre-wrap;}
 .auditspine-hr{border:none; border-top:1px solid #e5e7eb; margin:18px 0;}
-</style><a class="skip-link" href="#maincontent">Skip to main content</a><main class="main-content" id="maincontent" role="main">
+</style><main class="main-content" role="main">
 <div class="container">
 <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumbs"><a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> » <a href="https://calcdomain.com/categories/general" class="hover:text-blue-600">General</a> » <a href="https://calcdomain.com/subcategories/miscellaneous" class="hover:text-blue-600">Miscellaneous</a></nav>
 <h1>NEC Service Load Calculator (Non-Dwelling)</h1>
