--- a/sito_modificato/odds-calculator.html
+++ b/sito_modificato/odds-calculator.html
@@ -828,11 +828,11 @@ document.addEventListener('DOMContentLoaded', () => {
 
         implied = favorable / (favorable + unfavorable);
         if (implied === 0) { // e.g. 0 fav, 5 unfav
-            decimal = Infinity;
-            american = Infinity;
+            decimal = null;
+            american = null;
         } else if (implied === 1) { // e.g. 5 fav, 0 unfav
             decimal = 1;
-            american = -Infinity;
+            american = null;
         } else {
             decimal = 1 / implied;
         }
@@ -875,7 +875,7 @@ document.addEventListener('DOMContentLoaded', () => {
         implied = parseFloat(impVal) / 100;
         if (isNaN(implied) || implied < 0 || implied > 1) throw new Error('Probability must be between 0 and 100');
 
-        if (implied === 0) decimal = Infinity;
+        if (implied === 0) decimal = null;
         else if (implied === 1) decimal = 1;
         else decimal = 1 / implied;
       }
@@ -939,11 +939,21 @@ document.addEventListener('DOMContentLoaded', () => {
     elements.favorable.value = Math.round(favorable);
     elements.unfavorable.value = Math.round(unfavorable);
     
-    if (isFinite(american)) elements.american.value = fmtOdds(fmtDecimal(american));
-    else elements.american.value = (american > 0 ? "+Infinity" : "-Infinity");
-    
-    if (isFinite(decimal)) elements.decimal.value = fmtDecimal(decimal, 2);
-    else elements.decimal.value = "Infinity";
+    if (american === null) {
+      elements.american.value = '—';
+    } else if (isFinite(american)) {
+      elements.american.value = fmtOdds(fmtDecimal(american));
+    } else {
+      elements.american.value = '—';
+    }
+
+    if (decimal === null) {
+      elements.decimal.value = '—';
+    } else if (isFinite(decimal)) {
+      elements.decimal.value = fmtDecimal(decimal, 2);
+    } else {
+      elements.decimal.value = '—';
+    }
 
     elements.fractional.value = `${fractionalNum}/${fractionalDen}`;
     elements.implied.value = fmtDecimal(implied * 100, 2);
