--- a/sito_modificato/peer-to-peer-loan-calculator.html
+++ b/sito_modificato/peer-to-peer-loan-calculator.html
@@ -252,7 +252,25 @@ body * { visibility: hidden; }
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+    
+        <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Amortization schedule">
+          <table class="min-w-full text-sm text-right">
+            <thead class="bg-gray-100 text-gray-700 uppercase">
+              <tr>
+                <th class="px-4 py-2 text-left">#</th>
+                <th class="px-4 py-2 text-left">Date</th>
+                <th class="px-4 py-2">Payment</th>
+                <th class="px-4 py-2">Interest</th>
+                <th class="px-4 py-2">Principal</th>
+                <th class="px-4 py-2">Balance</th>
+              </tr>
+            </thead>
+            <tbody id="scheduleBody">
+              <tr><td colspan="6" class="text-center p-6 text-gray-500">Enter your loan details to generate a schedule.</td></tr>
+            </tbody>
+          </table>
+        </section>
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm">
   <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -424,26 +442,7 @@ body * { visibility: hidden; }
             </div>
           </div>
 
-          <details class="mt-6 bg-white rounded-lg no-print" id="scheduleDetails">
-            <summary class="font-semibold text-gray-800 p-4">View Full Amortization Schedule</summary>
-            <div class="overflow-x-auto border border-gray-200 rounded-b-lg" id="scheduleContainer">
-              <div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm text-right">
-                <thead class="bg-gray-100 text-gray-700 uppercase">
-                  <tr>
-                    <th class="px-4 py-2 text-left">#</th>
-                    <th class="px-4 py-2 text-left">Date</th>
-                    <th class="px-4 py-2">Payment</th>
-                    <th class="px-4 py-2">Interest</th>
-                    <th class="px-4 py-2">Principal</th>
-                    <th class="px-4 py-2">Balance</th>
-                  </tr>
-                </thead>
-                <tbody id="scheduleBody">
-                  <tr><td colspan="6" class="text-center p-6 text-gray-500">Enter your loan details to generate a schedule.</td></tr>
-                </tbody>
-              </table></div>
-            </div>
-          </details>
+          
         </div>
       </div>
 
