--- a/sito_modificato/perfect-number.html
+++ b/sito_modificato/perfect-number.html
@@ -747,7 +747,7 @@
       const perfectClearBtn = document.getElementById('perfect-clear-btn');
 
       function formatNumber(x) {
-        if (!isFinite(x)) return 'NaN';
+        if (!isFinite(x)) return '—';
         return x.toString();
       }
 
