--- a/sito_modificato/pythagorean-theorem.html
+++ b/sito_modificato/pythagorean-theorem.html
@@ -808,7 +808,7 @@
         }
 
         function fmt(value, decimals) {
-          if (!isFinite(value)) return 'NaN';
+          if (!isFinite(value)) return '—';
           return Number(value).toFixed(decimals);
         }
 
@@ -831,7 +831,7 @@
           const v = input.value;
           if (!v || v.trim() === '') return null;
           const num = Number(v);
-          if (!isFinite(num) || num <= 0) return NaN;
+          if (!isFinite(num) || num <= 0) return null;
           return num;
         }
 
@@ -1025,7 +1025,7 @@
         }
 
         function fmt(value, decimals) {
-          if (!isFinite(value)) return 'NaN';
+          if (!isFinite(value)) return '—';
           return Number(value).toFixed(decimals);
         }
 
@@ -1048,7 +1048,7 @@
           const v = input.value;
           if (!v || v.trim() === '') return null;
           const num = Number(v);
-          if (!isFinite(num) || num <= 0) return NaN;
+          if (!isFinite(num) || num <= 0) return null;
           return num;
         }
 
@@ -1067,7 +1067,7 @@
               errorEl.classList.remove('hidden');
               return;
             }
-            if (isNaN(a) || isNaN(b)) {
+            if (a === null || b === null) {
               errorEl.textContent = 'All side lengths must be positive real numbers.';
               errorEl.classList.remove('hidden');
               return;
@@ -1079,7 +1079,7 @@
               errorEl.classList.remove('hidden');
               return;
             }
-            if (isNaN(c) || isNaN(b) || c <= b) {
+            if (c === null || b === null || c <= b) {
               errorEl.textContent = 'For a right triangle, the hypotenuse c must be the largest side and greater than b.';
               errorEl.classList.remove('hidden');
               return;
@@ -1091,7 +1091,7 @@
               errorEl.classList.remove('hidden');
               return;
             }
-            if (isNaN(c) || isNaN(a) || c <= a) {
+            if (c === null || a === null || c <= a) {
               errorEl.textContent = 'For a right triangle, the hypotenuse c must be the largest side and greater than a.';
               errorEl.classList.remove('hidden');
               return;
@@ -1242,7 +1242,7 @@
         }
 
         function fmt(value, decimals) {
-          if (!isFinite(value)) return 'NaN';
+          if (!isFinite(value)) return '—';
           return Number(value).toFixed(decimals);
         }
 
@@ -1265,7 +1265,7 @@
           const v = input.value;
           if (!v || v.trim() === '') return null;
           const num = Number(v);
-          if (!isFinite(num) || num <= 0) return NaN;
+          if (!isFinite(num) || num <= 0) return null;
           return num;
         }
 
@@ -1284,7 +1284,7 @@
               errorEl.classList.remove('hidden');
               return;
             }
-            if (isNaN(a) || isNaN(b)) {
+            if (a === null || b === null) {
               errorEl.textContent = 'All side lengths must be positive real numbers.';
               errorEl.classList.remove('hidden');
               return;
@@ -1296,7 +1296,7 @@
               errorEl.classList.remove('hidden');
               return;
             }
-            if (isNaN(c) || isNaN(b) || c <= b) {
+            if (c === null || b === null || c <= b) {
               errorEl.textContent = 'For a right triangle, the hypotenuse c must be the largest side and greater than b.';
               errorEl.classList.remove('hidden');
               return;
@@ -1308,7 +1308,7 @@
               errorEl.classList.remove('hidden');
               return;
             }
-            if (isNaN(c) || isNaN(a) || c <= a) {
+            if (c === null || a === null || c <= a) {
               errorEl.textContent = 'For a right triangle, the hypotenuse c must be the largest side and greater than a.';
               errorEl.classList.remove('hidden');
               return;
