--- a/sito_modificato/quick-ratio.html
+++ b/sito_modificato/quick-ratio.html
@@ -634,7 +634,7 @@
             const currentLiabilities = parseFloat(document.getElementById('currentLiabilities').value) || 0;
 
             if (currentLiabilities === 0) {
-                document.getElementById('quickRatioValue').textContent = 'Infinity';
+                document.getElementById('quickRatioValue').textContent = '—';
             } else {
                 const quickRatio = (currentAssets - inventory) / currentLiabilities;
                 document.getElementById('quickRatioValue').textContent = quickRatio.toFixed(2);
@@ -653,7 +653,7 @@
             const currentLiabilities = parseFloat(document.getElementById('currentLiabilities').value) || 0;
 
             if (currentLiabilities === 0) {
-                document.getElementById('quickRatioValue').textContent = 'Infinity';
+                document.getElementById('quickRatioValue').textContent = '—';
             } else {
                 const quickRatio = (currentAssets - inventory) / currentLiabilities;
                 document.getElementById('quickRatioValue').textContent = quickRatio.toFixed(2);
@@ -672,7 +672,7 @@
             const currentLiabilities = parseFloat(document.getElementById('currentLiabilities').value) || 0;
 
             if (currentLiabilities === 0) {
-                document.getElementById('quickRatioValue').textContent = 'Infinity';
+                document.getElementById('quickRatioValue').textContent = '—';
             } else {
                 const quickRatio = (currentAssets - inventory) / currentLiabilities;
                 document.getElementById('quickRatioValue').textContent = quickRatio.toFixed(2);
