--- a/sito_modificato/refinance-calculator.html
+++ b/sito_modificato/refinance-calculator.html
@@ -256,7 +256,22 @@
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+        <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="New loan schedule">
+      <table class="min-w-full text-sm text-right">
+        <thead class="bg-gray-100 text-gray-700 uppercase">
+          <tr>
+            <th class="px-4 py-2 text-left">#</th>
+            <th class="px-4 py-2 text-left">Date</th>
+            <th class="px-4 py-2">Payment</th>
+            <th class="px-4 py-2">Interest</th>
+            <th class="px-4 py-2">Principal</th>
+            <th class="px-4 py-2">Balance</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody"></tbody>
+      </table>
+    </section>
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white border-b">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -386,24 +401,7 @@
               </div>
             </div>
 
-            <details class="mt-6 bg-white rounded-lg" id="scheduleDetails">
-              <summary class="font-semibold text-gray-900 px-4 py-3 cursor-pointer">View first 24 months of new loan schedule</summary>
-              <div class="mt-0 overflow-x-auto border-t border-gray-200" id="scheduleContainer">
-                <div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm text-right">
-                  <thead class="bg-gray-100 text-gray-700 uppercase">
-                    <tr>
-                      <th class="px-4 py-2 text-left">#</th>
-                      <th class="px-4 py-2 text-left">Date</th>
-                      <th class="px-4 py-2">Payment</th>
-                      <th class="px-4 py-2">Interest</th>
-                      <th class="px-4 py-2">Principal</th>
-                      <th class="px-4 py-2">Balance</th>
-                    </tr>
-                  </thead>
-                  <tbody id="scheduleBody"></tbody>
-                </table></div>
-              </div>
-            </details>
+            
           </section>
         </div>
 
