--- a/sito_modificato/rv-loan-calculator.html
+++ b/sito_modificato/rv-loan-calculator.html
@@ -393,34 +393,32 @@
               <button id="shareBtn" class="px-4 py-3 rounded-md bg-white border kbd-focus w-full sm:w-auto">Copy Shareable Link</button>
             </div>
 
-            <details id="scheduleWrap" class="mt-4 bg-white rounded-lg border" open="">
-              <summary class="px-4 py-3 font-semibold cursor-pointer">Payment Schedule</summary>
-              <div class="overflow-x-auto">
-                <table class="min-w-full text-sm text-right">
-                  <thead class="bg-gray-100 text-gray-700 uppercase">
-                    <tr>
-                      <th class="px-4 py-2 text-left">#</th>
-                      <th class="px-4 py-2 text-left">Date</th>
-                      <th class="px-4 py-2">Payment</th>
-                      <th class="px-4 py-2">Interest</th>
-                      <th class="px-4 py-2">Principal</th>
-                      <th class="px-4 py-2">Balance</th>
-                    </tr>
-                  </thead>
-                  <tbody id="schedBody"></tbody>
-                </table>
-              </div>
-            </details>
           </section>
         </div>
 <div data-canon-btnrow="1" style="display:flex; gap:10px; margin-top:12px; flex-wrap:wrap;">
 <button id="calcBtn" type="button" class="btn">Calculate</button>
 </div>
 </section>
-      <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
-    </div>
+    <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
+  </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+  <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Payment schedule">
+    <table class="min-w-full text-sm text-right">
+      <thead class="bg-gray-100 text-gray-700 uppercase">
+        <tr>
+          <th class="px-4 py-2 text-left">#</th>
+          <th class="px-4 py-2 text-left">Date</th>
+          <th class="px-4 py-2">Payment</th>
+          <th class="px-4 py-2">Interest</th>
+          <th class="px-4 py-2">Principal</th>
+          <th class="px-4 py-2">Balance</th>
+        </tr>
+      </thead>
+      <tbody id="scheduleBody"></tbody>
+    </table>
+  </section>
+
+  <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white border-b">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 py-4 flex items-center justify-between">
@@ -709,7 +707,7 @@
     const outs = {
       pmt: el('pmt'), intTotal: el('intTotal'), totalCost: el('totalCost'),
       payoffDate: el('payoffDate'), financed: el('financed'), taxOut: el('taxOut'), feesOut: el('feesOut'),
-      schedBody: el('schedBody')
+      scheduleBody: el('scheduleBody')
     };
     const buttons = {
       reset: el('resetBtn'), toggleSchedule: el('toggleSchedule'),
@@ -866,7 +864,7 @@
       outs.taxOut.textContent = cur.format(f.tax);
       outs.feesOut.textContent = cur.format(f.fees);
 
-      outs.schedBody.innerHTML = '';
+      outs.scheduleBody.innerHTML = '';
       const df = new Intl.DateTimeFormat(undefined, { year:'numeric', month:'short' });
       schedule.forEach(r => {
         const tr = document.createElement('tr');
@@ -878,7 +876,7 @@
           <td class="px-4 py-2">${cur.format(r.principal)}</td>
           <td class="px-4 py-2">${cur.format(r.balance)}</td>
         `;
-        outs.schedBody.appendChild(tr);
+        outs.scheduleBody.appendChild(tr);
       });
 
       outs.payoffDate.textContent = payoffDt ? df.format(payoffDt) : '—';
@@ -903,7 +901,7 @@
     // CSV export
     function downloadCsv() {
       const rows = [['#','Date','Payment','Interest','Principal','Balance']];
-      outs.schedBody.querySelectorAll('tr').forEach(tr => {
+      outs.scheduleBody.querySelectorAll('tr').forEach(tr => {
         const cells = Array.from(tr.children).map(td => td.textContent.replace(/[,]/g,''));
         rows.push(cells);
       });
