--- a/sito_modificato/square-calculator.html
+++ b/sito_modificato/square-calculator.html
@@ -626,9 +626,9 @@
               function formatNumber(x, opts) {
                 if (typeof x !== 'number' || !isFinite(x)) {
                   if (x === Infinity || x === -Infinity) {
-                    return (x < 0 ? '-' : '') + 'Infinity';
+                    return '—';
                   }
-                  return 'NaN';
+                  return '—';
                 }
 
                 const mode = precisionSelect.value;
