--- a/sito_modificato/strength-training-calculator.html
+++ b/sito_modificato/strength-training-calculator.html
@@ -242,7 +242,22 @@ body * { visibility: hidden; }
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+    
+    <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Training zone table">
+      <table class="min-w-full text-sm text-left">
+        <caption class="sr-only">Training zones based on 1RM percentage</caption>
+        <thead class="bg-gray-100 text-gray-700 uppercase">
+          <tr>
+            <th class="px-4 py-2">Percentage</th>
+            <th class="px-4 py-2">Weight</th>
+            <th class="px-4 py-2">Typical Reps</th>
+            <th class="px-4 py-2">Training Goal</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody"></tbody>
+      </table>
+    </section>
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm">
 <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -359,23 +374,6 @@ Reset
 </div>
 </div>
 
-<details class="mt-6 bg-white rounded-lg" id="scheduleDetails">
-<summary class="font-semibold text-gray-800">View Training Zone Table</summary>
-<div class="mt-4 overflow-x-auto border border-gray-200 rounded-lg" id="scheduleContainer">
-<div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm text-left">
-<thead class="bg-gray-100 text-gray-700 uppercase">
-<tr>
-<th class="px-4 py-2">Percentage</th>
-<th class="px-4 py-2">Weight</th>
-<th class="px-4 py-2">Typical Reps</th>
-<th class="px-4 py-2">Training Goal</th>
-</tr>
-</thead>
-<tbody id="scheduleBody">
-</tbody>
-</table></div>
-</div>
-</details>
 </section>
 </div>
 
