--- a/sito_modificato/student-loan-calculator.html
+++ b/sito_modificato/student-loan-calculator.html
@@ -303,7 +303,21 @@
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+        <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Loan schedule">
+      <table class="w-full text-sm text-right">
+        <thead class="bg-gray-100 text-gray-700 uppercase">
+          <tr>
+            <th class="py-2 px-3 text-left font-semibold">Month</th>
+            <th class="py-2 px-3 text-right font-semibold">Payment</th>
+            <th class="py-2 px-3 text-right font-semibold">Interest</th>
+            <th class="py-2 px-3 text-right font-semibold">Principal</th>
+            <th class="py-2 px-3 text-right font-semibold">Balance</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody"></tbody>
+      </table>
+    </section>
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -412,14 +426,7 @@
                             <h4 class="font-semibold mb-2 text-center">Loan Balance Over Time</h4>
                             <div class="h-64 bg-white rounded-lg p-2"><canvas id="balanceChart"></canvas></div>
                         </div>
-                         <details class="mt-6 bg-white rounded-lg p-4"><summary>View Amortization Schedule (First 240 Payments)</summary>
-                            <div class="mt-4 schedule-container">
-                                <div id="scheduleWrap" class="tableWrap"><table class="w-full text-sm">
-                                    <thead><tr class="bg-gray-50"><th class="text-left p-2">Month</th><th class="text-right p-2">Payment</th><th class="text-right p-2">Interest</th><th class="text-right p-2">Principal</th><th class="text-right p-2">Balance</th></tr></thead>
-                                    <tbody id="scheduleBody"></tbody>
-                                </table></div>
-                            </div>
-                        </details>
+                         
                     </div>
                 </div>
                 
