--- a/sito_modificato/timer-calculator.html
+++ b/sito_modificato/timer-calculator.html
@@ -182,7 +182,19 @@
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+        <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Timer schedule">
+      <table class="min-w-full text-sm text-right">
+        <thead class="bg-gray-100 text-gray-700 uppercase">
+          <tr>
+            <th class="px-4 py-2 text-left">#</th>
+            <th class="px-4 py-2 text-left">Timestamp</th>
+            <th class="px-4 py-2">Offset</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody"></tbody>
+      </table>
+    </section>
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white border-b">
   <nav class="container mx-auto px-4 lg:px-6 py-4 flex items-center justify-between">
@@ -293,22 +305,7 @@
           <div id="results-container" class="bg-blue-50 border border-blue-100 rounded-lg p-5 space-y-4">
             <!-- Filled by JS -->
             <div id="resultsSummary" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
-            <div id="scheduleWrap" class="hidden tableWrap">
-              <details class="bg-white rounded-lg">
-                <summary class="font-semibold text-gray-800 px-4 py-3 cursor-pointer">View Timer Schedule</summary>
-                <div class="mt-2 overflow-x-auto border border-gray-200 rounded-lg">
-                  <table class="min-w-full text-sm text-right">
-                    <thead class="bg-gray-100 text-gray-700 uppercase">
-                      <tr>
-                        <th class="px-4 py-2 text-left">#</th>
-                        <th class="px-4 py-2 text-left">Timestamp</th>
-                        <th class="px-4 py-2">Offset</th>
-                      </tr>
-                    </thead>
-                    <tbody id="scheduleBody"></tbody>
-                  </table>
-                </div>
-              </details>
+            
             </div>
           </div>
         </section>
