--- a/sito_modificato/trapezoidal-rule.html
+++ b/sito_modificato/trapezoidal-rule.html
@@ -773,7 +773,7 @@
       const trapClearBtn = document.getElementById('trap-clear-btn');
 
       function formatNumber(x) {
-        if (!isFinite(x)) return 'NaN';
+        if (!isFinite(x)) return '—';
         const absx = Math.abs(x);
         if (absx !== 0 && (absx < 1e-8 || absx > 1e9)) {
           return x.toExponential(8);
