--- a/sito_modificato/trig-identity.html
+++ b/sito_modificato/trig-identity.html
@@ -925,7 +925,7 @@
       }
 
       function formatNumber(x) {
-        if (!isFinite(x)) return 'NaN';
+        if (!isFinite(x)) return '—';
         const absx = Math.abs(x);
         if (absx !== 0 && (absx < 1e-4 || absx > 1e7)) {
           return x.toExponential(6);
@@ -1028,8 +1028,8 @@
             l = fL(x);
             r = fR(x);
           } catch (e) {
-            l = NaN;
-            r = NaN;
+            l = null;
+            r = null;
             status = 'Error';
             note = 'Evaluation error at x = ' + formatNumber(x) + ' rad.';
           }
@@ -1084,8 +1084,8 @@
           html += '<tr class="identity-row">';
           html += '<td class="px-2 py-1 border-b font-mono">' + formatNumber(row.x) + '</td>';
           html += '<td class="px-2 py-1 border-b font-mono">' + formatNumber(row.xDeg) + '</td>';
-          html += '<td class="px-2 py-1 border-b font-mono">' + (isFinite(row.lhsVal) ? formatNumber(row.lhsVal) : 'NaN') + '</td>';
-          html += '<td class="px-2 py-1 border-b font-mono">' + (isFinite(row.rhsVal) ? formatNumber(row.rhsVal) : 'NaN') + '</td>';
+          html += '<td class="px-2 py-1 border-b font-mono">' + (isFinite(row.lhsVal) ? formatNumber(row.lhsVal) : '—') + '</td>';
+          html += '<td class="px-2 py-1 border-b font-mono">' + (isFinite(row.rhsVal) ? formatNumber(row.rhsVal) : '—') + '</td>';
           const statusColor =
             row.status === 'OK' ? 'text-green-700' :
             row.status === 'Mismatch' ? 'text-red-700' :
