--- a/sito_modificato/unsecured-loan-calculator.html
+++ b/sito_modificato/unsecured-loan-calculator.html
@@ -315,7 +315,21 @@ body * { visibility: hidden; }
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+        <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Amortization schedule">
+      <table class="min-w-full text-sm text-right">
+        <thead class="bg-gray-100 text-gray-700 uppercase">
+          <tr>
+            <th class="px-4 py-2 text-left">Month</th>
+            <th class="px-4 py-2">Payment</th>
+            <th class="px-4 py-2">Interest</th>
+            <th class="px-4 py-2">Principal</th>
+            <th class="px-4 py-2">Balance</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody"></tbody>
+      </table>
+    </section>
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm">
 <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -427,24 +441,7 @@ The **Annual Percentage Rate (APR)** is the total yearly cost of your loan, incl
 </div>
 </div>
 
-<details class="mt-6 bg-white rounded-lg" id="scheduleDetails">
-<summary class="font-semibold text-gray-800">View Amortization Schedule</summary>
-<div class="mt-4 overflow-x-auto border border-gray-200 rounded-lg" id="scheduleContainer">
-<div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm text-right">
-<thead class="bg-gray-100 text-gray-700 uppercase">
-<tr>
-<th scope="col" class="px-4 py-2 text-left">Month</th>
-<th scope="col" class="px-4 py-2">Payment</th>
-<th scope="col" class="px-4 py-2">Interest</th>
-<th scope="col" class="px-4 py-2">Principal</th>
-<th scope="col" class="px-4 py-2">Balance</th>
-</tr>
-</thead>
-<tbody id="scheduleBody">
-</tbody>
-</table></div>
-</div>
-</details>
+
 </section>
 </div>
 
