--- a/sito_modificato/personal-loan-calculator.html
+++ b/sito_modificato/personal-loan-calculator.html
@@ -305,7 +305,22 @@
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+        <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Amortization schedule">
+      <table class="min-w-full text-sm text-right">
+        <thead class="bg-gray-100 text-gray-700 uppercase">
+          <tr>
+            <th class="px-4 py-2 text-left">#</th>
+            <th class="px-4 py-2 text-left">Date</th>
+            <th class="px-4 py-2">Payment</th>
+            <th class="px-4 py-2">Interest</th>
+            <th class="px-4 py-2">Principal</th>
+            <th class="px-4 py-2">Balance</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody"></tbody>
+      </table>
+    </section>
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -458,15 +473,7 @@
                             <div class="w-full md:w-1/3 h-40"><canvas id="pieChart"></canvas></div>
                         </div>
                         
-                        <details class="mt-6 bg-white rounded-lg p-4"><summary>View Charts &amp; Schedule</summary>
-                            <div class="mt-4 h-64"><canvas id="lineChart"></canvas></div>
-                            <div class="mt-6 table-container" id="scheduleContainer">
-                                <div id="scheduleWrap" class="tableWrap"><table>
-                                    <thead><tr><th>#</th><th>Date</th><th>Payment</th><th>Interest</th><th>Principal</th><th>Balance</th></tr></thead>
-                                    <tbody id="scheduleBody"></tbody>
-                                </table></div>
-                            </div>
-                        </details>
+                        
                     </div>
                 </div>
 
