--- a/sito_modificato/sba-loan-calculator.html
+++ b/sito_modificato/sba-loan-calculator.html
@@ -236,7 +236,24 @@ aside, header, footer { display: none !imgortant; }
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+    
+    <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Amortization schedule">
+      <table class="min-w-full text-sm text-right">
+        <thead class="bg-gray-100 text-gray-700 uppercase">
+          <tr>
+            <th scope="col" class="px-4 py-2 text-left">#</th>
+            <th scope="col" class="px-4 py-2 text-left">Date</th>
+            <th scope="col" class="px-4 py-2">Payment</th>
+            <th scope="col" class="px-4 py-2">Interest</th>
+            <th scope="col" class="px-4 py-2">Principal</th>
+            <th scope="col" class="px-4 py-2">Balance</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody"></tbody>
+      </table>
+    </section>
+
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm">
 <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -361,26 +378,6 @@ SBA Loan Type
 </div>
 </div>
 
-<details class="mt-6 bg-white rounded-lg" id="scheduleDetails">
-<summary class="font-semibold text-gray-800 p-4">View Amortization Schedule</summary>
-<div class="overflow-x-auto border-t border-gray-200 rounded-b-lg" id="scheduleContainer">
-<div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm text-right">
-<thead class="bg-gray-100 text-gray-700 uppercase">
-<tr>
-<th scope="col" class="px-4 py-2 text-left">#</th>
-<th scope="col" class="px-4 py-2 text-left">Date</th>
-<th scope="col" class="px-4 py-2">Payment</th>
-<th scope="col" class="px-4 py-2">Interest</th>
-<th scope="col" class="px-4 py-2">Principal</th>
-<th scope="col" class="px-4 py-2">Balance</th>
-</tr>
-</thead>
-<tbody id="scheduleBody"></tbody>
-</table></div>
-</div>
-</details>
-</section>
-</div>
 
 <article class="bg-white p-6 rounded-lg shadow-md mt-8 prose">
 <section aria-labelledby="methodology-heading">
