--- a/sito_modificato/simple-loan.html
+++ b/sito_modificato/simple-loan.html
@@ -226,7 +226,27 @@
       <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
     </div>
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+        <section id="scheduleWrap" class="tableWrap mt-6 bg-white rounded-lg border" aria-label="Payment schedule">
+      <table class="min-w-full text-sm">
+        <caption class="sr-only">Simple-interest payment breakdown for each period</caption>
+        <thead class="bg-slate-100 text-gray-700">
+          <tr>
+            <th class="py-2 px-3 text-left font-semibold">#</th>
+            <th class="py-2 px-3 text-left font-semibold">Date</th>
+            <th class="py-2 px-3 text-right font-semibold">Payment</th>
+            <th class="py-2 px-3 text-right font-semibold">Principal</th>
+            <th class="py-2 px-3 text-right font-semibold">Interest</th>
+            <th class="py-2 px-3 text-right font-semibold">Balance</th>
+          </tr>
+        </thead>
+        <tbody id="scheduleBody">
+          <tr>
+            <td colspan="6" class="py-6 px-3 text-center text-gray-500">Enter loan details to generate the schedule.</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+<section class="card content-card" id="howToUse" aria-label="How to use and methodology">
       <h2>Full original guide (expanded)</h2>
     <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -393,34 +413,7 @@
             </div>
           </div>
 
-          <section class="mt-8">
-            <div class="flex items-center justify-between mb-3">
-              <h2 class="text-xl font-semibold text-gray-800">Payment schedule</h2>
-              <button id="toggleSchedule" type="button" class="text-sm font-semibold text-blue-600 hover:text-blue-700">
-                Show full schedule
-              </button>
-            </div>
-            <div class="overflow-auto border border-gray-200 rounded-lg">
-              <div id="scheduleWrap" class="tableWrap"><table class="min-w-full text-sm">
-                <caption class="sr-only">Simple-interest payment breakdown for each period</caption>
-                <thead class="bg-slate-100 text-gray-700">
-                  <tr>
-                    <th class="py-2 px-3 text-left font-semibold">#</th>
-                    <th class="py-2 px-3 text-left font-semibold">Date</th>
-                    <th class="py-2 px-3 text-right font-semibold">Payment</th>
-                    <th class="py-2 px-3 text-right font-semibold">Principal</th>
-                    <th class="py-2 px-3 text-right font-semibold">Interest</th>
-                    <th class="py-2 px-3 text-right font-semibold">Balance</th>
-                  </tr>
-                </thead>
-                <tbody id="scheduleBody">
-                  <tr>
-                    <td colspan="6" class="py-6 px-3 text-center text-gray-500">Enter loan details to generate the schedule.</td>
-                  </tr>
-                </tbody>
-              </table></div>
-            </div>
-          </section>
+          
         </section>
 
         <article class="bg-white p-6 rounded-lg shadow-md mt-8 prose">
